swapped fr logo, fixed job posting alignment

--- a/assets/sass/cds/_nav.scss
+++ b/assets/sass/cds/_nav.scss
@@ -66,7 +66,7 @@
     background-image: url("../img/cds/cds-logo-blk-en.svg");
   }
   &.fr {
-    background-image: url("../img/cds/cds-logo-blk-en.svg");
+    background-image: url("../img/cds/cds-logo-blk-fr.svg");
   }
 }
 
